--fixed scrollbar jumping issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html{
+	margin-left: calc(100vw - 100%);
+}
+
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 
 * {
